--- a/angular.json
+++ b/angular.json
@@ -30,8 +30,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "src/assets/fonts/fonts.scss"
+              "src/styles.scss"
 
             ],
             "scripts": ["node_modules/@fortawesome/fontawesome-free/js/all.min.js"]
@@ -92,13 +91,11 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              "src/assets/fonts/fonts.scss"
+              "src/assets"
 
             ],
             "styles": [
-              "src/styles.scss",
-              "src/assets/fonts/fonts.scss"
+              "src/styles.scss"
 
             ],
             "scripts": ["node_modules/@fortawesome/fontawesome-free/js/all.min.js"]
