--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/router": "^16.0.0",
     "@capacitor/android": "^5.2.2",
     "@capacitor/angular": "^2.0.3",
-    "@capacitor/core": "latest",
+    "@capacitor/core": "^5.2.2",
     "@capacitor/ios": "^5.3.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@ngxs/store": "^3.8.1",
