--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@capacitor/core": "^5.2.2",
     "@capacitor/ios": "^5.3.0",
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@ngxs/logger-plugin": "^3.8.1",
+    "@ngxs/storage-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
     "bootstrap": "^5.3.1",
+    "ngxs-reset-plugin": "^3.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
