--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngxs/storage-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
     "bootstrap": "^5.3.1",
+    "ngx-skeleton-loader": "^8.1.0",
     "ngxs-reset-plugin": "^3.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
